--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,13 +3,13 @@ version: '3'
 services:
   app:
     build: .
-    entrypoint: ./.docker/entrypoint.sh
+    entrypoint: wait-for db:3306 -t 40 -- ./.docker/entrypoint.sh
     ports:
       - 3000:3000
     volumes:
       - .:/home/node/app
-    depends_on:
-      - db
+    depends_on: 
+      - db 
 
   db:
     build: ./.docker/mysql
