--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
@@ -29,7 +30,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "sequelize": "^6.11.0",
+    "sequelize": "^6.12.0-beta.1",
     "sequelize-typescript": "^2.1.1",
     "sqlite3": "^5.0.2"
   },
@@ -38,7 +39,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.0.2",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
     "@types/sequelize": "^4.28.10",
     "@types/supertest": "^2.0.11",
