--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ DB_USERNAME=root
 DB_PASSWORD=root
 DB_DATANASE=fin
 DB_PORT=3306
+
+KAFKA_CLIENTE_ID=nest
+KAFKA_HOST=host.docker.internal:9094
+KAFKA_USE_SSL=false
+KAFKA_CONSUMER_GROUP_ID=nest
