--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ KAFKA_CLIENTE_ID=nest
 KAFKA_HOST=host.docker.internal:9094
 KAFKA_USE_SSL=false
 KAFKA_CONSUMER_GROUP_ID=nest
+KAFKA_SASL_USERNAME=
+KAFKA_SASL_PASSWORD=
